--- a/BeanSceneReservationApp/Views/Reservations/Create.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Create.cshtml
@@ -8,6 +8,7 @@
 <h1>Book your reservation</h1>
 
 <h4>Welcome please enter enter in your details to book your reservation</h4>
+<p>please enter in your email so we can confirm your resrevation the rest of your personal inforamtion is optional as we value your privacy no information for guests is saved for longer than 30 days</p>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -40,11 +41,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
+                <p class="text-info">Please enter here if you require any special arrangements such as a high chair or dietary requirments</p>
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrderSource" class="control-label"></label>
+                <p class="text-info">Please confirm which way the order was booked if your using the website please select Online</p>
                 <select asp-for="OrderSource" class="form-control">
                     @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.OrderSource)))
                     {
@@ -53,7 +56,7 @@
                 </select>
                 <span asp-validation-for="OrderSource" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="ReservationStatus" class="control-label"></label>
                 <select asp-for="ReservationStatus" class="form-control">
                     @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.ReservationStatus)))
@@ -62,7 +65,7 @@
                     }
                 </select>
                 <span asp-validation-for="ReservationStatus" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="SittingTime" class="control-label"></label>
                 <select asp-for="SittingTime" class="form-control">
@@ -74,7 +77,9 @@
                 <span asp-validation-for="SittingTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AreaName" class="control-label"></label>
+                <label class="control-label">Area Name</label>
+                <p class="text-info">Please Select a table that is in the correct area</p>
+                <p class="text-info">Main rooms tables are labeled as 'M', balcony tables are labeled as 'B', and outdoor tables are labeled as 'O'.</p>
                 <select asp-for="AreaName" class="form-control">
                     @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.AreaName)))
                     {
@@ -84,7 +89,8 @@
                 <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TableId" class="control-label"></label>
+                <label class="control-label">Table Number</label>
+                <p class="text-info">Tables starting with M are for the Main area, Tables starting with O are for the OutDoor area O1, O2 Tables starting with B are for the Balcony area, B1, B2</p>
                 <select asp-for="TableId" class="form-control" asp-items="ViewBag.TableId"></select>
                 <span asp-validation-for="TableId" class="text-danger"></span>
             </div>
