--- a/BeanSceneReservationApp/Views/Members/Delete.cshtml
+++ b/BeanSceneReservationApp/Views/Members/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BeanSceneReservationApp.Models.Member
+﻿@model Member
 
 @{
     ViewData["Title"] = "Delete";
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Phone)
+            @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Phone)
+            @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Password)
