--- a/BeanSceneReservationApp/Views/Reservations/Details.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Details.cshtml
@@ -36,22 +36,10 @@
             @Html.DisplayFor(model => model.StartTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Duration)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Duration)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumOfGuests)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NumOfGuests)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReservationSource)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReservationSource)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
@@ -60,28 +48,34 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.OrderSource)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.OrderSource)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ReservationStatus)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ReservationStatus)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SittingTime)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SittingTime)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AreaName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AreaName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Table)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Table.TableId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Member)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Member.MemberId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sitting)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sitting.SittingId)
+            @Html.DisplayFor(model => model.Table.TableName)
         </dd>
     </dl>
 </div>
