--- a/BeanSceneReservationApp/Views/Reservations/Edit.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Edit.cshtml
@@ -15,11 +15,6 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ReservationId" />
             <div class="form-group">
-                <label asp-for="SittingId" class="control-label"></label>
-                <select asp-for="SittingId" class="form-control" asp-items="ViewBag.SittingId"></select>
-                <span asp-validation-for="SittingId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="GuestName" class="control-label"></label>
                 <input asp-for="GuestName" class="form-control" />
                 <span asp-validation-for="GuestName" class="text-danger"></span>
@@ -40,19 +35,9 @@
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Duration" class="control-label"></label>
-                <input asp-for="Duration" class="form-control" />
-                <span asp-validation-for="Duration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="NumOfGuests" class="control-label"></label>
                 <input asp-for="NumOfGuests" class="form-control" />
                 <span asp-validation-for="NumOfGuests" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReservationSource" class="control-label"></label>
-                <input asp-for="ReservationSource" class="form-control" />
-                <span asp-validation-for="ReservationSource" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
@@ -60,19 +45,49 @@
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="OrderSource" class="control-label"></label>
+                <select asp-for="OrderSource" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.OrderSource)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
+                <span asp-validation-for="OrderSource" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ReservationStatus" class="control-label"></label>
-                <input asp-for="ReservationStatus" class="form-control" />
+                <select asp-for="ReservationStatus" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.ReservationStatus)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
                 <span asp-validation-for="ReservationStatus" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SittingTime" class="control-label"></label>
+                <select asp-for="SittingTime" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.SittingTime)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
+                <span asp-validation-for="SittingTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AreaName" class="control-label"></label>
+                <select asp-for="AreaName" class="form-control">
+                    @foreach (var item in Enum.GetValues(typeof(BeanSceneReservationApp.Models.AreaName)))
+                    {
+                        <option value="@item">@item</option>
+                    }
+                </select>
+                <span asp-validation-for="AreaName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TableId" class="control-label"></label>
                 <select asp-for="TableId" class="form-control" asp-items="ViewBag.TableId"></select>
                 <span asp-validation-for="TableId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MemberId" class="control-label"></label>
-                <select asp-for="MemberId" class="form-control" asp-items="ViewBag.MemberId"></select>
-                <span asp-validation-for="MemberId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -86,5 +101,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
