--- a/BeanSceneReservationApp/Views/Reservations/Index.cshtml
+++ b/BeanSceneReservationApp/Views/Reservations/Index.cshtml
@@ -26,28 +26,25 @@
                 @Html.DisplayNameFor(model => model.StartTime)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Duration)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.NumOfGuests)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReservationSource)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.OrderSource)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ReservationStatus)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.SittingTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.AreaName)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Table)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Member)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sitting)
             </th>
             <th></th>
         </tr>
@@ -68,34 +65,35 @@
                 @Html.DisplayFor(modelItem => item.StartTime)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.NumOfGuests)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReservationSource)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Notes)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.OrderSource)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.ReservationStatus)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Table.TableId)
+                @Html.DisplayFor(modelItem => item.SittingTime)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Member.MemberId)
+                @Html.DisplayFor(modelItem => item.AreaName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Sitting.SittingId)
+                @Html.DisplayFor(modelItem => item.Table.TableName)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ReservationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ReservationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ReservationId">Delete</a>
-            </td>
+            @if (User.IsInRole("Manager") || User.IsInRole("Staff"))
+            {
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ReservationId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ReservationId">Report</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ReservationId">Delete</a>
+                </td>
+                    
+            }
         </tr>
 }
     </tbody>
